# airlift

./: CONTRIBUTING.md  LICENSE  README.md  flake.nix  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/workflows/: manual_release.yml  release.yml
docs/: faq.md
docs/examples/: add_env_variables.md  airflow_2-2-2-arm.md  airflow_2-5-1-arm.md  dbt-cmd.md  import_variables.md  mount_aws_credentials.md  override_image.md  use_aws_secret_manager.md
src/airlift/: main.py
src/airlift/commands/: check.py  import_variables.py  logs.py  pause.py  remove.py  run_dag.py  start.py  status.py
src/airlift/config/: config.py
src/airlift/config/airlift/: required_software.yaml
src/airlift/config/docker/: Dockerfile
src/airlift/config/helm/: final_values.yaml  values.yaml
src/airlift/config/kind/: cluster.yaml
src/airlift/utils/: airflow.py  airlift.py  command.py  docker.py  file.py  helm.py  kind.py  kubernetes.py  parser.py
